Link to registration

--- a/django_mises/main/templates/tags/usernav.html
+++ b/django_mises/main/templates/tags/usernav.html
@@ -3,7 +3,7 @@
         {% if user.id %}
         <a href="{% url user user.username %}">Oma profiili</a>
         {% else %}
-        <a href="{% url index %}">Rekisteröidy</a>
+        <a href="{% url register %}">Rekisteröidy</a>
         {% endif %}
     </li>
     <li>
