Use slogan template

--- a/django_mises/main/templates/base.html
+++ b/django_mises/main/templates/base.html
@@ -16,7 +16,8 @@
                     <a href="{% url index %}">Ludwig von Mises -Instituutti</a>
                 </h1>
                 <p class="title" style="left: 136px;">
-                    Ludwig von Mises -Instituutti <em>Tu Ne Cede Malis</em>
+                    Ludwig von Mises -Instituutti
+                    <em>{% random_slogan %}</em>
                 </p>
                 <p class="tagline" style="top: 60px">
                     Vastustajat eivät minua lainkaan huolestuta. Totuus, jota olen etsinyt, on niin mieleinen, että tyydyn siihen, että olen saanut sanoa sen kansalaisilleni; se on liikkumaton, eikä pelkää, vaikka laineet vyöryttävät sappeansa sen päälle. Se kestää, vaikka omanvoitonpyynti hautaa sen pohjamutaan, jolla raivoavat aallot sen peittävät, mutta pysyy kuitenkin kaiken tämän keskellä vuorenlujana ja järkähtämättömänä. <em>-- Anders Chydenius</em>
