For admins, link to admin

--- a/django_mises/main/templates/tags/usernav.html
+++ b/django_mises/main/templates/tags/usernav.html
@@ -6,6 +6,11 @@
         <a href="{% url register %}">Rekisteröidy</a>
         {% endif %}
     </li>
+    {% if user.is_staff %}
+    <li>
+        <a href="{% url admin:index %}">Ylläpito</a>
+    </li>
+    {% endif %}
     <li>
         {% if user.id %}
         <a href="{% url logout %}">Kirjaudu ulos</a>
