Non-internationalised translation
Sucks for every non-Finn!

--- a/django_mises/blog/templates/tags/blog_preview.html
+++ b/django_mises/blog/templates/tags/blog_preview.html
@@ -26,7 +26,7 @@
                             {% endif %}
                             <p>
                                 {{ post.preview|safe }}
-                                <a href="{{ post_url }}" class="more" id="ctl00_ctl00_ContentPlaceHolder1_ContentPlaceHolder1_FeaturedArticle1_rptFeaturedArticle_ctl00_lnkMore">read more…</a>
+                                <a href="{{ post_url }}" class="more" id="ctl00_ctl00_ContentPlaceHolder1_ContentPlaceHolder1_FeaturedArticle1_rptFeaturedArticle_ctl00_lnkMore">lue lisää…</a>
                             </p>
                         </div>
                     </div>
