--- a/django_mises/blog/templates/admin/blog/post/change_form.html
+++ b/django_mises/blog/templates/admin/blog/post/change_form.html
@@ -13,3 +13,25 @@
 </p>
 {% endblock object-tools %}
 
+{% block after_related_objects %}
+<div style="padding-top: 10px; border: 1px solid #CCCCCC; width: 735px;">
+{% if comments %}
+<p>
+    {% for comment in comments %}
+    <div style="padding-left: 10px; padding-top: 10px; border: 1px solid #CCCCCC;">
+        <div style="padding-bottom: 5px;">
+            {{ comment.user }}
+        </div>
+        <div style="padding-bottom: 5px;">
+            {{ comment.comment|safe }}
+        </div>
+    </div>
+    {% endfor %}
+</p>
+{% endif %}
+<div style="padding-left: 10px;"> {# This is still within a <form> tag #}
+    {{ comment_form.as_p }}
+</div>
+</div>
+{% endblock after_related_objects %}
+
