Number messages in admin comments

--- a/django_mises/blog/templates/admin/blog/post/change_form.html
+++ b/django_mises/blog/templates/admin/blog/post/change_form.html
@@ -20,7 +20,7 @@
     {% for comment in comments %}
     <div style="padding-left: 10px; padding-top: 10px; border: 1px solid #CCCCCC;">
         <div style="padding-bottom: 5px;">
-            {{ comment.submit_date|date }} {{ comment.submit_date|time }} | <a href="{% url user comment.user %}" target="_new">{{ comment.user.first_name }} {{ comment.user.last_name }}</a>
+            #{{ forloop.counter }} | {{ comment.submit_date|date }} {{ comment.submit_date|time }} | <a href="{% url user comment.user %}" target="_new">{{ comment.user.first_name }} {{ comment.user.last_name }}</a>
         </div>
         <div style="padding-bottom: 5px;">
             {{ comment.comment|safe }}
