Use original logo for now

--- a/django_mises/media/css/screen.css
+++ b/django_mises/media/css/screen.css
@@ -979,7 +979,7 @@ br.clear
 }
 #header .logo a
 {
-    background: url(../images/logo.jpg) no-repeat;
+    background: url(../images/logo.gif) no-repeat;
     text-indent: -9999px;
 }
 
