--- a/django_mises/media/css/screen.css
+++ b/django_mises/media/css/screen.css
@@ -1393,7 +1393,9 @@ ul.faculty li h5 a:hover
 }
 #content .blogteaser a.more
 {
-    font-size: .7857em !important;
+    padding-top: 10px;
+    color: #1765BC;
+    font-size: 1.2em !important;
 }
 
 
