Comment tests for email, apologizes for newcomers
Because they can not comment, as there's no form
where they can input their email address and name,
which are required to keep discussion polite and the
user verified.

--- a/django_mises/blog/templates/post.html
+++ b/django_mises/blog/templates/post.html
@@ -31,7 +31,7 @@
     </div>
 {% endfor %}
 {% endif %}
-{% if user.id %}
+{% if user.email %}
 <hr />
     <div style="padding-left: 10px;"> {# This is still within a <form> tag #}
         <form method="post" action="">
@@ -39,6 +39,11 @@
         {{ comment_form.as_p }}
         <button type="submit" name="submit">Kommentoi</button>
         </form>
+    </div>
+{% else %}
+<hr />
+    <div style="padding-left: 10px;"> {# This is still within a <form> tag #}
+        Kommentointimahdollisuus toistaiseksi pois käytöstä uusilta tulokkailta. Ominaisuus tuodaan mahdollisimman pian kaikkien käyttöön. Pahoittelut!
     </div>
 {% endif %}
 {% endblock content %}
