--- a/django_mises/main/templates/base.html
+++ b/django_mises/main/templates/base.html
@@ -1,5 +1,5 @@
 {% load misesfilters %}
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:og="http://ogp.me/ns#" xmlns:fb="https://www.facebook.com/2008/fbml">
     <head>
         <title>
             Mises-Instituutti {% if title %} · {{ title }}{% endif %}
@@ -7,6 +7,10 @@
         <link href="/media/css/screen.css" media="screen" type="text/css" rel="stylesheet" />
         <link href="/media/css/print.css" media="print" type="text/css" rel="stylesheet" />
         <link href="/media/css/DailyArticleStyles.css" media="print" type="text/css" rel="stylesheet" />
+
+        {% block extra_head %}
+        {% endblock extra_head %}
+
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
