--- a/django_mises/blog/templates/post.html
+++ b/django_mises/blog/templates/post.html
@@ -7,7 +7,7 @@
 <!-- OG -->
     <meta property="og:title" content="Mises-Instituutti {% if title %} · {{ title }}{% endif %}" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="{% url post post.id post.slug %}" />
+    <meta property="og:url" content="http://mises.fi{% url post post.id post.slug %}" />
     <meta property="og:description" content="{{ post.preview }}" />
 <!-- /OG -->
 {% endblock extra_head %}
