--- a/django_mises/main/templates/base.html
+++ b/django_mises/main/templates/base.html
@@ -1,4 +1,7 @@
 {% load misesfilters %}
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:og="http://ogp.me/ns#" xmlns:fb="https://www.facebook.com/2008/fbml">
     <head>
         <title>
@@ -7,6 +10,8 @@
         <link href="/media/css/screen.css" media="screen" type="text/css" rel="stylesheet" />
         <link href="/media/css/print.css" media="print" type="text/css" rel="stylesheet" />
         <link href="/media/css/DailyArticleStyles.css" media="print" type="text/css" rel="stylesheet" />
+
+        <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
 
         {% block extra_head %}
         {% endblock extra_head %}
