--- a/django_mises/main/templates/base.html
+++ b/django_mises/main/templates/base.html
@@ -11,7 +11,7 @@
         <link href="/media/css/print.css" media="print" type="text/css" rel="stylesheet" />
         <link href="/media/css/DailyArticleStyles.css" media="print" type="text/css" rel="stylesheet" />
 
-        <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
+        <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 
         {% block extra_head %}
         {% endblock extra_head %}
