--- a/django_mises/blog/templates/tags/blog_nav.html
+++ b/django_mises/blog/templates/tags/blog_nav.html
@@ -12,7 +12,7 @@
 
     <li>
         {% if has_next %}
-            <a id="blog_previous" href="{% url post next %}">Seuraava &raquo;</a>
+            <a id="blog_next" href="{% url post next %}">Seuraava &raquo;</a>
         {% endif %}
     </li>
 </ul>
