--- a/django_mises/blog/templates/post.html
+++ b/django_mises/blog/templates/post.html
@@ -39,7 +39,7 @@ recommendations="false"></fb:activity>
 </div>
 <script
 src="http://connect.facebook.net/en_US/all.js#xfbml=1"></script><fb:like
-href="mises.fi/post/27/oskari-juurikkala-pankit-ja-rahan-valta" show_faces="false" width="450" font=""></fb:like>
+href="" show_faces="false" width="450" font=""></fb:like>
 {% if comments %}
 <hr />
 {% for comment in comments %}
