--- a/django_mises/main/templates/base.html
+++ b/django_mises/main/templates/base.html
@@ -63,6 +63,10 @@
                 {% block content %}
                 {% endblock content %}
             </div>
+            <div id="sidebar">
+                {% block sidebar %}
+                {% endblock sidebar %}
+            </div>
         </div>
 
         <div id="footer">
