--- a/django_mises/main/templates/index.html
+++ b/django_mises/main/templates/index.html
@@ -1,6 +1,15 @@
 {% extends "base.html" %}
 {% load misesfilters %}
 
+{% block sidebar %}
+
+<div id="sidebar" style="margin-top: 20px;">
+    <script src="http://connect.facebook.net/en_US/all.js#xfbml=1"></script>
+    <fb:activity site="mises.fi" width="300" height="300" header="true" font="" border_color="" recommendations="false"></fb:activity>
+</div>
+
+{% endblock sidebar %}
+
 {% block content %}
 <div id="FeaturedArticles">
 {% blog_preview %}
