--- a/django_mises/blog/templates/post.html
+++ b/django_mises/blog/templates/post.html
@@ -39,9 +39,8 @@
 <div id="DailyArticle">
 {{ post.content|safe }}
 </div>
-<script
-src="http://connect.facebook.net/en_US/all.js#xfbml=1"></script><fb:like
-href="" show_faces="false" width="450" font=""></fb:like>
+{% comment %}<script src="http://connect.facebook.net/en_US/all.js#xfbml=1"></script>
+<fb:like href="" show_faces="false" width="450" font=""></fb:like>{% endcomment %}
 {% if comments %}
 <hr />
 {% for comment in comments %}
