--- a/django_mises/blog/templates/post.html
+++ b/django_mises/blog/templates/post.html
@@ -9,6 +9,10 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://mises.fi{% url post post.id post.slug %}" />
     <meta property="og:description" content="{{ post.preview }}" />
+    
+    <meta property="og:image" content="" />
+    <meta property="og:site_name" content="Mises Instituutti" />
+    <meta property="fb:admins" content="816080216" />    
 <!-- /OG -->
 {% endblock extra_head %}
 
