--- a/django_mises/blog/templates/post.html
+++ b/django_mises/blog/templates/post.html
@@ -43,8 +43,8 @@
 <div id="DailyArticle">
 {{ post.content|safe }}
 </div>
-{% comment %}<script src="http://connect.facebook.net/en_US/all.js#xfbml=1"></script>
-<fb:like href="" show_faces="false" width="450" font=""></fb:like>{% endcomment %}
+<script src="http://connect.facebook.net/en_US/all.js#xfbml=1"></script>
+<fb:like href="" show_faces="false" width="450" font=""></fb:like>
 {% if comments %}
 <hr />
 {% for comment in comments %}
