admins thing to index

--- a/django_mises/main/templates/index.html
+++ b/django_mises/main/templates/index.html
@@ -1,6 +1,10 @@
 {% extends "base.html" %}
 {% load misesfilters %}
 
+{% block extra_head %}
+    <meta property="fb:admins" content="816080216" />    
+{% endblock extra_head %}
+
 {% block sidebar %}
 
 <div id="sidebar" style="margin-top: 20px;">
