--- a/django_mises/main/templates/base.html
+++ b/django_mises/main/templates/base.html
@@ -9,7 +9,7 @@
         </title>
         <link href="/media/css/screen.css" media="screen" type="text/css" rel="stylesheet" />
         <link href="/media/css/print.css" media="print" type="text/css" rel="stylesheet" />
-        <link href="/media/css/DailyArticleStyles.css" media="print" type="text/css" rel="stylesheet" />
+        <link href="/media/css/DailyArticleStyles.css" media="screen" type="text/css" rel="stylesheet" />
 
         <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 
