Show link to links

--- a/django_mises/main/templates/base.html
+++ b/django_mises/main/templates/base.html
@@ -48,6 +48,7 @@
                 <ul id="navigation">
                     {% nav "index" "Etusivu" %}
                     {% nav "info" "Tietoa" %}
+                    {% nav "links" "Linkkejä" %}
                     {# this will be the current front page when we have more than blogs #}
                     {% comment %}
                     <li id="ctl00_ctl00_lnkABlog">
