--- a/django_mises/main/templates/base.html
+++ b/django_mises/main/templates/base.html
@@ -49,6 +49,7 @@
                     {% nav "index" "Etusivu" %}
                     {% nav "info" "Tietoa" %}
                     {% nav "links" "Linkkejä" %}
+                    {% nav "shop" "Kauppa" %}
                     {# this will be the current front page when we have more than blogs #}
                     {% comment %}
                     <li id="ctl00_ctl00_lnkABlog">
