google-site-verification by Jukka

--- a/django_mises/main/templates/base.html
+++ b/django_mises/main/templates/base.html
@@ -13,6 +13,8 @@
 
         <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 
+        <meta name="google-site-verification" content="o6gX3xhbFk82mI0yUVCbJwKOEOcWbowNYTYuCV_UgWg" />
+
         {% block extra_head %}
         {% endblock extra_head %}
 
