--- a/django_mises/blog/templates/post.html
+++ b/django_mises/blog/templates/post.html
@@ -58,9 +58,9 @@
     </div>
 {% endfor %}
 {% endif %}
-{% comment %}{% if user.email %}
 <hr />
-    <div style="padding-left: 10px;"> {# This is still within a <form> tag #}
+{% if user.email and user.get_profile.is_verified %}
+    <div style="padding-left: 10px;">
         <form method="post" action="">
         {% csrf_token %}
         {{ comment_form.as_p }}
@@ -68,10 +68,13 @@
         </form>
     </div>
 {% else %}
-<hr />
-    <div style="padding-left: 10px;"> {# This is still within a <form> tag #}
-        Kommentointimahdollisuus toistaiseksi pois käytöstä uusilta tulokkailta. Ominaisuus tuodaan mahdollisimman pian kaikkien käyttöön. Pahoittelut!
+    <div style="padding-left: 10px;">
+        {% if user.email %}
+        Klikkaa <a href="{% url get_verification_code %}">tästä</a> tilaaksesi vahvistuskoodin sähköpostiin, jotta voit kommentoida kirjoitusta
+        {% else %}
+        Voit kommentoida tätä kirjoitusta kirjautumalla sisään
+        {% endif %}
     </div>
-{% endif %}{% endcomment %}
+{% endif %}
 {% endblock content %}
 
