--- a/django_mises/main/templates/index.html
+++ b/django_mises/main/templates/index.html
@@ -4,9 +4,10 @@
 {% block sidebar %}
 
 <div id="sidebar" style="margin-top: 20px;">
-<iframe allowTransparency='true' frameborder='0' scrolling='no'
-src='http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.com%2Fpages%2FV%25C3%25A4liaikainen-testi%2F219005271447605%3Fsk%3Dwall&amp;width=292&amp;colorscheme=light&amp;show_faces=true&amp;stream=true&amp;header=true&amp;height=427'
-style='border:none; overflow:hidden; width:292px; height:427px;'/>
+<script
+src="http://connect.facebook.net/en_US/all.js#xfbml=1"></script>
+<fb:like-box href="http://www.facebook.com/pages/Väliaikainen-testi/219005271447605"
+width="300" show_faces="false" stream="true" header="false"></fb:like-box>
 
     <script src="http://connect.facebook.net/en_US/all.js#xfbml=1"></script>
     <fb:activity site="mises.fi" width="300" height="300" header="true" font="" border_color="" recommendations="false"></fb:activity>
