--- a/django_mises/blog/templates/post.html
+++ b/django_mises/blog/templates/post.html
@@ -21,7 +21,8 @@
 
 <script
 src="http://connect.facebook.net/en_US/all.js#xfbml=1"></script>
-<fb:like-box href="http://www.facebook.com/pages/Väliaikainen-testi/219005271447605"
+<fb:like-box
+href="http://www.facebook.com/pages/Mises-instituutin-stream/155517304512872"
 width="300" show_faces="false" stream="true" header="false"></fb:like-box>
 
 
