--- a/django_mises/blog/templates/post.html
+++ b/django_mises/blog/templates/post.html
@@ -50,12 +50,14 @@ width="300" show_faces="false" stream="true" header="false"></fb:like-box>
 <div id="DailyArticle">
 {{ post.content|safe }}
 </div>
+<div id="bottom_facebook">
 <script src="http://connect.facebook.net/en_US/all.js#xfbml=1"></script>
 <fb:like href="" show_faces="false" width="450" font=""></fb:like>
 
 <br />
 <a name="fb_share" type="button_count" href="http://www.facebook.com/sharer.php">Share</a>
 <script src="http://static.ak.fbcdn.net/connect.php/js/FB.Share" type="text/javascript"></script>
+</div>
 
 {% if comments %}
 <hr />
