--- a/django_mises/main/templates/base.html
+++ b/django_mises/main/templates/base.html
@@ -78,6 +78,7 @@
                 <div class="box">
                     <p>Ludwig von Mises -Instituutti</p>
                     <p>Yhteydenotot: <a href="mailto:staff@mises.fi">staff@mises.fi</a></p>
+                    <p><a href="/rss.xml"><img src="/media/images/rss.jpg" alt="rss" /></a></p>
                 </div>
             </div>
         </div>
