--- a/django_mises/users/templates/login.html
+++ b/django_mises/users/templates/login.html
@@ -26,5 +26,9 @@
     </div>
 </form>
 
+<p>
+Mikäli sinulla ei ole tunnuksia, voit <a href="{% url register %}">rekisteröityä täällä</a>
+</p>
+
 {% endblock content %}
 
