Link to downloads

--- a/django_mises/main/templates/base.html
+++ b/django_mises/main/templates/base.html
@@ -50,6 +50,7 @@
                     {% nav "index" "Etusivu" %}
                     {% nav "info" "Tietoa" %}
                     {% nav "links" "Linkkejä" %}
+                    {% nav "downloads" "Tiedostoja/Media" %}
                     {% nav "shop" "Kauppa" %}
                     {# this will be the current front page when we have more than blogs #}
                     {% comment %}
