--- a/django_mises/blog/templates/post.html
+++ b/django_mises/blog/templates/post.html
@@ -10,7 +10,7 @@
     <meta property="og:url" content="http://mises.fi{% url post post.id post.slug %}" />
     <meta property="og:description" content="{{ post.preview }}" />
     
-    <meta property="og:image" content="" />
+    <meta property="og:image" content="{{ post.preview_img }}" />
     <meta property="og:site_name" content="Mises Instituutti" />
     <meta property="fb:admins" content="816080216" />    
 <!-- /OG -->
