--- a/django_mises/main/templates/base.html
+++ b/django_mises/main/templates/base.html
@@ -77,6 +77,18 @@
                 {% endblock content %}
             </div>
             <div id="sidebar">
+
+<script type="text/javascript"><!--
+google_ad_client = "ca-pub-5323649929757659";
+/* Mises medium rect */
+google_ad_slot = "1946554389";
+google_ad_width = 300;
+google_ad_height = 250;
+//-->
+</script>
+<script type="text/javascript"
+src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
                 {% block sidebar %}
                 {% endblock sidebar %}
             </div>
