Do not collide #sidebar

--- a/django_mises/main/templates/base.html
+++ b/django_mises/main/templates/base.html
@@ -76,7 +76,7 @@
                 {% block content %}
                 {% endblock content %}
             </div>
-            <div id="sidebar">
+            <div id="sidebar" style="margin-top: 20px;">
 
 <script type="text/javascript"><!--
 google_ad_client = "ca-pub-5323649929757659";
