--- a/django_mises/main/templates/404.html
+++ b/django_mises/main/templates/404.html
@@ -60,11 +60,9 @@
 
         <div class="container main">
             <div id="content">
-                Hakemaanne sivua ei löydy.
+                <h1>Hakemaanne sivua ei löydy.</h1>
                 <p>
-                    <em>Sivulla on pieni bugi blogien selaamisessa, olet saattanut törmätä siihen. Korjataan mahdollisimman pian! Kiitos kärsivällisyydestä!</em>
-                    <br />
-                    Sillä välin suosittelemme selaamaan <a href="{% url index %}">etusivun</a> kautta.
+                    Suosittelemme selaamaan <a href="{% url index %}">etusivun</a> kautta.
                 </p>
             </div>
         </div>
