Link to article list

--- a/django_mises/main/templates/base.html
+++ b/django_mises/main/templates/base.html
@@ -48,6 +48,7 @@
                 {% include "tags/usernav.html" %}
                 <ul id="navigation">
                     {% nav "index" "Etusivu" %}
+                    {% nav "list" "Artikkelit" %}
                     {% nav "info" "Tietoa" %}
                     {% nav "links" "Linkkejä" %}
                     {% nav "downloads" "Tiedostoja/Media" %}
