--- a/django_mises/main/templates/base.html
+++ b/django_mises/main/templates/base.html
@@ -79,6 +79,15 @@
             </div>
             <div id="sidebar" style="margin-top: 20px;">
 
+                <div style="margin-bottom: 20px;">
+                    <p>
+                    <h3>-15% Libera-instituutin verkkokaupasta!</h3>
+                    Mises-instituutin sivujen lukijat saavat nyt -15%
+                    ostoksista <a href="http://kauppa.liberainstituutti.fi/">Libera-instituutin verkkokaupasta</a>
+                    koodilla <em>misesfi</em> &dash; eli laatukirjoja ostamaan!
+                    </p>
+                </div>
+
 <script type="text/javascript"><!--
 google_ad_client = "ca-pub-5323649929757659";
 /* Mises medium rect */
